# image-resizer

./: .gitignore  Cargo.toml  README.md
cdk/: package-lock.json
cdk/lib/: cdk-stack.ts
image-cli/: Cargo.toml
image-cli/src/: main.rs  upload.rs
image-resizer-lamda/: Cargo.toml
