[package]
name = "image-resizer-lamda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.8.10"
aws-sdk-s3 = "1.112.0"
image = "0.25.8"
lib = { version = "0.1.0", path = "../lib" }
tokio = { version = "1.48.0", features = ["full"] }
